--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </header>
-    <section class="hero-screen" id="hero-screen">
+<section class="hero-screen" id="hero-screen">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-7">
@@ -75,33 +75,33 @@
                             <div class="swiper-wrapper">
                                 <div class="slide active swiper-slide">
                                     <h1 class="title offer-title">
-                                       Новые поступления в этом сезоне
+                                        <?= $redux["home-hero-section-title"]; ?>
                                     </h1>
                                     <p class="offer-intro">
-                                        Утонченные сочетания и бархатные оттенки - вот то, что вы искали в этом сезоне. Время исследовать.
+                                        <?= $redux["home-hero-section-desc"]; ?>
                                     </p>
                                 </div>
                                 <div class="slide swiper-slide">
                                     <h1 class="offer-title title">
-                                        Что-то новенькое. Мы заждались тебя.
+                                        <?= $redux["home-hero-section-title-second"]; ?>
                                     </h1>
                                     <p class="offer-intro">
-                                        Надоело искать себя в сером городе? Настало время новых идей, свежих красок и вдохновения с Womazing!
+                                        <?= $redux["home-hero-section-desc-second"]; ?>
                                     </p>
                                 </div>
                                 <div class="slide swiper-slide">
                                     <h1 class="offer-title title">
-                                        Включай новый сезон с WOMAZING
+                                        <?= $redux["home-hero-section-title-third"]; ?>
                                     </h1>
                                     <p class="offer-intro">
-                                        Мы обновили ассортимент - легендарные коллекции и новинки от отечественных дизайнеров.
+                                        <?= $redux["home-hero-section-desc-third"]; ?>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <div class="offer__btns d-flex align-items-center">
                             <a href="#collection" class="offer__btn-down" id="btn-down"></a>
-                            <a href="./shop.html" class="btn btn_offer">
+                            <a href="<?= $redux["home-hero-section-link"]; ?>" class="btn btn_offer">
                                 Открыть магазин
                             </a>
                         </div>
@@ -118,26 +118,26 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="offer_img">
-                                        <img src="img/photo1.jpg" alt="">
+                                        <img src="<?= $redux["home-hero-section-slider-img1"]['url']; ?>" alt="">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="offer_img">
-                                        <img src="img/photo1.jpg" alt="">
+                                        <img src="<?= $redux["home-hero-section-slider-img2"]['url']; ?>" alt="">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="offer_img">
-                                        <img src="img/photo1.jpg" alt="">
+                                        <img src="<?= $redux["home-hero-section-slider-img3"]['url']; ?>" alt="">
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="offer-img d-none d-md-block offer-img_left">
-                            <img src="img/photo2.jpg" alt="">
+                            <img src="<?= $redux["home-hero-section-img-second"]['url']; ?>" alt="">
                         </div>
                         <div class="offer-img d-none d-md-block offer-img_right">
-                            <img src="img/photo3.jpg" alt="">
+                            <img src="<?= $redux["home-hero-section-img-third"]['url']; ?>" alt="">
                         </div>
                     </div>
                 </div>
