--- a/index.html
+++ b/index.html
@@ -75,33 +75,33 @@
                             <div class="swiper-wrapper">
                                 <div class="slide active swiper-slide">
                                     <h1 class="title offer-title">
-                                        <?= $redux["home-hero-section-title"]; ?>
+                                        Коллекция
                                     </h1>
                                     <p class="offer-intro">
-                                        <?= $redux["home-hero-section-desc"]; ?>
+                                        Привет, мир
                                     </p>
                                 </div>
                                 <div class="slide swiper-slide">
                                     <h1 class="offer-title title">
-                                        <?= $redux["home-hero-section-title-second"]; ?>
+                                        Это второй слайд
                                     </h1>
                                     <p class="offer-intro">
-                                        <?= $redux["home-hero-section-desc-second"]; ?>
+                                        А это текст
                                     </p>
                                 </div>
                                 <div class="slide swiper-slide">
                                     <h1 class="offer-title title">
-                                        <?= $redux["home-hero-section-title-third"]; ?>
+                                        Тут третий слайд
                                     </h1>
                                     <p class="offer-intro">
-                                        <?= $redux["home-hero-section-desc-third"]; ?>
+                                        Тут текст
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <div class="offer__btns d-flex align-items-center">
                             <a href="#collection" class="offer__btn-down" id="btn-down"></a>
-                            <a href="<?= $redux["home-hero-section-link"]; ?>" class="btn btn_offer">
+                            <a href="./shop.html" class="btn btn_offer">
                                 Открыть магазин
                             </a>
                         </div>
