--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
     </div>
     <!-- JS -->
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
