--- a/index.html
+++ b/index.html
@@ -76,26 +76,26 @@
                             <div class="swiper-wrapper">
                                 <div class="slide active swiper-slide">
                                     <h1 class="title offer-title">
-                                        Коллекция
+                                        Новые поступления в этом сезоне
                                     </h1>
                                     <p class="offer-intro">
-                                        Привет, мир
+                                         Утонченные сочетания и бархатные оттенки - вот то, что вы искали в этом сезоне. Время исследовать.
                                     </p>
                                 </div>
                                 <div class="slide swiper-slide">
                                     <h1 class="offer-title title">
-                                        Это второй слайд
+                                        Что-то новенькое. Мы заждались тебя.
                                     </h1>
                                     <p class="offer-intro">
-                                        А это текст
+                                        Надоело искать себя в сером городе? Настало время новых идей, свежих красок и вдохновения с Womazing!
                                     </p>
                                 </div>
                                 <div class="slide swiper-slide">
                                     <h1 class="offer-title title">
-                                        Тут третий слайд
+                                        Включай новый сезон с WOMAZING
                                     </h1>
                                     <p class="offer-intro">
-                                        Тут текст
+                                        Мы обновили ассортимент - легендарные коллекции и новинки от отечественных дизайнеров.
                                     </p>
                                 </div>
                             </div>
@@ -119,26 +119,26 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="offer_img">
-                                        <img src="<?= $redux["home-hero-section-slider-img1"]['url']; ?>" alt="">
+                                        <img src="img/photo1.jpg" alt="">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="offer_img">
-                                        <img src="<?= $redux["home-hero-section-slider-img2"]['url']; ?>" alt="">
+                                        <img src="img/photo4.jpg" alt="">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="offer_img">
-                                        <img src="<?= $redux["home-hero-section-slider-img3"]['url']; ?>" alt="">
+                                        <img src="img/photo5.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="offer-img d-none d-md-block offer-img_left">
-                            <img src="<?= $redux["home-hero-section-img-second"]['url']; ?>" alt="">
+                            <img src="img/photo2.jpg" alt="">
                         </div>
                         <div class="offer-img d-none d-md-block offer-img_right">
-                            <img src="<?= $redux["home-hero-section-img-third"]['url']; ?>" alt="">
+                            <img src="img/photo3.jpg" alt="">
                         </div>
                     </div>
                 </div>
